# Adaptive_MOE

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.windsurf/rules/: ai_development_rules.md  code_style_rules.md  development_rules.md  documentation_rules.md  git_commit_rules.md  implementation_sequence_rules.md  modularity_rules.md  testing_rules.md
adaptive_moe/: __init__.py  __main__.py
adaptive_moe/experts/: __init__.py  expert_manager.py  trainer.py
adaptive_moe/integration/: __init__.py  model.py  moe_layer.py
adaptive_moe/router/: __init__.py  router.py  trainer.py
adaptive_moe/utils/: __init__.py  config.py  logging.py  model_utils.py
configs/: router_config.yaml
documentation/: CODING_GUIDELINES.md  bugs.md  implementation_plan.md  progress.md  tech_description.md
scripts/: generate_router_data.py  train_router.py
tests/: test_adaptive_moe.py  test_expert_manager.py  test_expert_trainer.py  test_imports.py  test_model_loading.py  test_moe_layer.py  test_multi_expert_router.py  test_router.py  test_router_trainer.py  test_router_trainer_simple.py  test_yarn_mistral_loading.py
