[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-moe"
version = "0.1.0"
description = "Adaptive Mixture of Experts system with dynamic expert creation"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.1",
    "transformers>=4.34.0",
    "peft>=0.5.0",
    "datasets>=2.14.5",
    "accelerate>=0.23.0",
    "wandb>=0.15.10",
    "pyyaml>=6.0",
    "tqdm>=4.66.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "flake8>=6.1.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=adaptive_moe --cov-report=term-missing"

[project.scripts]
adaptive-moe = "adaptive_moe.cli:main"
